[gd_scene load_steps=2 format=3 uid="uid://br47w61qb8npa"]

[ext_resource type="Script" path="res://Interface/Components/Ammo/AmmoCount.gd" id="1"]

[node name="AmmoCount" type="MarginContainer"]
offset_right = 52.0
offset_bottom = 14.0
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CurrentAmmo" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"

[node name="Separater" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "/"

[node name="MaxAmmo" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "0"
